--- a/page_app/templates/page_app/partial/home.html
+++ b/page_app/templates/page_app/partial/home.html
@@ -15,11 +15,11 @@
                     class="text-body-secondary">invista conosco.</span></h2>
             <p class="lead">Na jornada financeira, cada escolha é uma semente plantada para o futuro. Oferecemos
                 soluções sólidas e orientação especializada, cultivando seu patrimônio com cuidado. Faça parte do
-                caminho rumo à prosperidade – onde cada investimento é uma oportunidade para o seu crescimento
+                caminho rumo à prosperidade - onde cada investimento é uma oportunidade para o seu crescimento
                 sustentável.</p>
         </div>
         <div class="col-md-5">
-            <img src="page_app/img/imagem_2.jpg" alt="Imagem da empresa"
+            <img src="/static/page_app/img/imagem_2.jpg" alt="Imagem da empresa"
                 class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
                 height="500" role="img" focusable="false">
         </div>
@@ -36,7 +36,7 @@
                 investimento conosco!</p>
         </div>
         <div class="col-md-5 order-md-1">
-            <img src="page_app/img/imagem_3.jpg" alt="Imagem da empresa"
+            <img src="/static/page_app/img/imagem_3.jpg" alt="Imagem da empresa"
                 class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
                 height="500" role="img" focusable="false">
         </div>
@@ -52,7 +52,7 @@
                 financeiro. Juntos, construímos um futuro sólido e próspero. Invista no seu crescimento conosco!</p>
         </div>
         <div class="col-md-5">
-            <img src="page_app/img/imagem_1.jpg" alt="Imagem da empresa"
+            <img src="/static/page_app/img/imagem_1.jpg" alt="Imagem da empresa"
                 class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
                 height="500" role="img" focusable="false">
         </div>
